--- a/Objective_C_TableView_Api_Json/View/Base.lproj/Main.storyboard
+++ b/Objective_C_TableView_Api_Json/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="955-7j-JhZ">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
@@ -17,9 +17,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="yuL-8l-yhA">
-                                <rect key="frame" x="0.0" y="118" width="393" height="700"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="yuL-8l-yhA">
+                                <rect key="frame" x="0.0" y="244" width="393" height="574"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="393" id="DqZ-1o-Uuh"/>
+                                    <constraint firstAttribute="height" constant="574" id="p9t-Sn-z0i"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellAccount" id="npg-Lk-ClK">
                                         <rect key="frame" x="0.0" y="50" width="393" height="47.666667938232422"/>
@@ -32,7 +36,11 @@
                                 </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="idE-Oo-0sP">
-                                <rect key="frame" x="100" y="59" width="193" height="39"/>
+                                <rect key="frame" x="100" y="197" width="193" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="39" id="8Yn-xb-sLf"/>
+                                    <constraint firstAttribute="width" constant="193" id="jSb-iP-OSH"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Add account" cornerStyle="dynamic">
                                     <backgroundConfiguration key="background">
@@ -44,37 +52,109 @@
                                     <action selector="buttonPost:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3bW-MJ-l8q"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hEm-LV-N1x" customClass="ZoomableView">
+                                <rect key="frame" x="96" y="58" width="200" height="120"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="yuL-8l-yhA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GGQ-8e-ZbB"/>
-                            <constraint firstItem="idE-Oo-0sP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="PJZ-hy-Q2s"/>
-                            <constraint firstItem="idE-Oo-0sP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="aDK-1w-5bJ"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="yuL-8l-yhA" secondAttribute="bottom" id="cO0-fc-dBe"/>
-                            <constraint firstItem="yuL-8l-yhA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="eVh-te-YLk"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="idE-Oo-0sP" secondAttribute="trailing" constant="100" id="mFt-eK-zpA"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yuL-8l-yhA" secondAttribute="trailing" id="trD-Dc-GlF"/>
+                            <constraint firstItem="yuL-8l-yhA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4Lk-PQ-y5a"/>
+                            <constraint firstItem="idE-Oo-0sP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="9sA-yn-J9J"/>
+                            <constraint firstItem="yuL-8l-yhA" firstAttribute="top" secondItem="idE-Oo-0sP" secondAttribute="bottom" constant="8" symbolic="YES" id="D4v-ul-gz1"/>
+                            <constraint firstItem="yuL-8l-yhA" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="fE2-KA-QEx"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="idE-Oo-0sP" secondAttribute="trailing" constant="100" id="hIi-eE-7yW"/>
+                            <constraint firstItem="yuL-8l-yhA" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="mDz-OV-db7"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="qyb-dM-ZeL"/>
                     <connections>
-                        <outlet property="tableViewAccount" destination="yuL-8l-yhA" id="sUe-vG-6n1"/>
+                        <outlet property="tableViewAccount" destination="yuL-8l-yhA" id="1w4-M5-v9G"/>
+                        <outlet property="zoomableView" destination="hEm-LV-N1x" id="4bR-6L-mGf"/>
+                        <segue destination="HMf-EA-Mcl" kind="presentation" identifier="displayWebView" id="I9w-yp-WsH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1066.4122137404579" y="3.5211267605633805"/>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="hBw-lR-Vdx">
+            <objects>
+                <viewController storyboardIdentifier="displayWebView" id="HMf-EA-Mcl" customClass="WKWebViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JnQ-AV-flK">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HDG-Bm-mrQ">
+                                <rect key="frame" x="0.0" y="10" width="393" height="832"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="nKB-zh-VWr">
+                                <rect key="frame" x="176.66666666666666" y="401" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="F1b-Fu-lnT"/>
+                                    <constraint firstAttribute="width" constant="40" id="hh6-yF-jgu"/>
+                                </constraints>
+                            </activityIndicatorView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Evw-2y-O0t"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="nKB-zh-VWr" firstAttribute="centerX" secondItem="JnQ-AV-flK" secondAttribute="centerX" id="1Ps-OD-oVY"/>
+                            <constraint firstItem="Evw-2y-O0t" firstAttribute="bottom" secondItem="HDG-Bm-mrQ" secondAttribute="bottom" id="Cuu-qJ-c1p"/>
+                            <constraint firstItem="nKB-zh-VWr" firstAttribute="centerY" secondItem="JnQ-AV-flK" secondAttribute="centerY" id="Iza-RY-HCc"/>
+                            <constraint firstItem="HDG-Bm-mrQ" firstAttribute="trailing" secondItem="Evw-2y-O0t" secondAttribute="trailing" id="Jgd-jk-rqf"/>
+                            <constraint firstItem="HDG-Bm-mrQ" firstAttribute="leading" secondItem="Evw-2y-O0t" secondAttribute="leading" id="Yz0-c8-bqR"/>
+                            <constraint firstItem="HDG-Bm-mrQ" firstAttribute="top" secondItem="Evw-2y-O0t" secondAttribute="top" constant="10" id="iSM-2a-F2S"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="indicator" destination="nKB-zh-VWr" id="IHf-WH-nwh"/>
+                        <outlet property="webView" destination="HDG-Bm-mrQ" id="rEQ-aA-ZbP"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="huN-QO-Npn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1921.3740458015266" y="7.746478873239437"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="EL0-t1-MLQ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="955-7j-JhZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rLw-kT-srm">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="foa-2D-t4y"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bpL-va-ml1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="139.69465648854961" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <resources>
         <namedColor name="button">
-            <color red="0.30216305269999999" green="0.86075680269999999" blue="0.85863095239999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color red="0.30199998617172241" green="0.86100000143051147" blue="0.85900002717971802" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
